k8s/bigotes-pro/bonnie/default/deployments/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
          - name: web
            containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: web
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 150m
            memory: 150Mi
      tolerations:
        - key: "IngressOnly"
          operator: "Exists"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: app
                  operator: In
                  values:
                    - hello
            topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  labels:
    app: hello
  annotations:
    traefik.ingress.kubernetes.io/load-balancer-method: drr
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb-2
  labels:
    app: hello
  annotations:
    traefik.ingress.kubernetes.io/load-balancer-method: wrr
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
        - backend:
            serviceName: helloweb
            servicePort: 80
  - http:
      paths:
        - backend:
            serviceName: helloweb-2
            servicePort: 80
